--- a/index.html
+++ b/index.html
@@ -2,5 +2,55 @@
 <html>
     <head>
         <title>Merlin salong</title>
+        <link rel="stylesheet" href="res/css/style.css">
+        <link rel="icon" href="/res/images/logosmall.png" type="image/icon type">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="src/js/script.js"></script>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     </head>
+    <header>
+        <img src="/res/images/logo.webp">
+        <nav>
+            <a href="index.html">Esileht</a>
+            <div class="dropdown">
+                <a href="services.html" class="dropbtn">Teenused</a>
+                <div class="dropdown-content">
+                    <a href="#">Maniküür ja geelküüned</a>
+                    <a href="#">Pediküür</a>
+                    <a href="#">Juuksur</a>
+                    <a href="#">Ripsmepikendused</a>
+                    <a href="#">Püsimeik</a>
+                    <a href="#">Kosmeetika</a>
+                    <a href="#">Depilatsioon</a>
+                    <a href="#">Näohooldus</a>
+                    <a href="#">Transion</a>
+                    <a href="#">Fotoepilatsioon</a>
+                    <a href="#">Keratiinihooldus</a>
+                </div>
+            </div>
+            <a href="contact.html">Kontaktid</a>
+            <a href="additionalinf.html">Lisainfo</a>
+        </nav>
+    </header>
+    <body>
+        <div class="textoverimg">
+            <img src="/res/images/salon.jpg" id="salonimg">
+            <div class="textoverlay">
+                <h1>Asume aadressil Tähe 102.</h1>
+                <p>Parkimine maa-aluses parklas mänguväljaku kõrval!<br>(2 märgistatud kohta)</p>
+                <div>
+                    <h4>Vaata kaardil!</h4>
+                    <a href="https://maps.app.goo.gl/Wjvq9CNcNTex5NDd9" targe="_blank"><i class="material-icons" style="font-size:48px;color:rgb(225, 0, 0)">place</i></a>
+                </div>
+            </div>
+        </div>
+        <div class="introduction">
+            <h1>Tere tulemast Merlin salongi!</h1>
+            <p>Salong, kus ilu kohtub aastatepikkuse kogemuse ja lõõgastava atmosfääriga! Oleme uhked, et oleme Tartus teenindanud mitmeid aastaid, pakkudes tipptasemel iluteenuseid. Salongis valitseb meeldiv õhkkond, kus saad lõõgastuda, imetledes samal ajal kaunist pargivaadet. Ootame sind avasüli, et jagada sinuga parimat, mida ilumaailmal pakkuda on!</p>
+        </div>
+        <div class="team">
+        
+        </div>
+    </body>
 </html>
