--- a/index.html
+++ b/index.html
@@ -79,6 +79,42 @@
                     </div>
                 </div>
             </div>
+            <div class="mySlides">
+                <div class="slide_content">
+                    <img src="/res/images/employee4.jpg">
+                    <div>
+                        <h1>VERONIKA HAUG</h1>
+                        <p>juuksur</p>
+                    </div>
+                </div>
+            </div>
+            <div class="mySlides">
+                <div class="slide_content">
+                    <img src="/res/images/employee5.jpg">
+                    <div>
+                        <h1>KAISA SAAVEL</h1>
+                        <p>juuksur</p>
+                    </div>
+                </div>
+            </div>
+            <div class="mySlides">
+                <div class="slide_content">
+                    <img src="/res/images/employee3.jpg">
+                    <div>
+                        <h1>HANNA HANST</h1>
+                        <p>kosmeetik</p>
+                    </div>
+                </div>
+            </div>
+            <div class="mySlides">
+                <div class="slide_content">
+                    <img src="/res/images/employee6.jpg">
+                    <div>
+                        <h1>KADRI PAABO</h1>
+                        <p>kosmeetik</p>
+                    </div>
+                </div>
+            </div>
           <button class="button" id="button1" onclick="plusDivs(1)" ><p>&#10095;</p></button>
         </div>
     </body>
