Editing text overlay on the home page

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
             <img src="/res/images/salon.jpg" id="salonimg">
             <div class="textoverlay">
                 <h1>Asume aadressil Tähe 102.</h1>
-                <p>Parkimine maa-aluses parklas mänguväljaku kõrval!<br>(2 märgistatud kohta)</p>
+                <br>
+                <p>Parkimine maa-aluses parklas mänguväljaku kõrval!<br>(2 märgistatud kohta)</p><br>
                 <div>
                     <h4>Vaata kaardil!</h4>
-                    <a href="https://maps.app.goo.gl/Wjvq9CNcNTex5NDd9" target="_blank"><i class="material-icons" style="font-size:48px;color:rgb(225, 0, 0)">place</i></a>
+                    <a href="https://maps.app.goo.gl/Wjvq9CNcNTex5NDd9" target="_blank"><i class="material-icons" style="font-size:36px;color:rgb(225, 0, 0)">place</i></a>
                 </div>
             </div>
         </div>
